# pull_rows_rpa

./: app_pyqt.py  cli_pull_rows.py  excel_pandas.py  pyproject.toml
