[tool.poetry]
name = "commonproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.1"
playwright = "^1.39.0"
pylint = "^3.0.2"
pyqt6 = "6.4.2"
charset-normalizer = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
